feat: added post bounded context

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -7,7 +7,7 @@
     <meta name="robots" content="noindex" />
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()" />
 
-    <link rel="icon" href="/favicon.png" />
+    <link rel="icon" href="/favicon.ico" />
 
     <link href="/dist/tailwind.css" rel="stylesheet" />
 
